0026321: Crash in BRepMesh_FastDiscret::Add

BRepMesh_FaceAttribute: distinguish constructor and parameters initialization.